[package]
name = "mathlikeanim-rs-example"
version = "0.1.0"
authors = ["wiseaidev <oss@wiseai.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version="1.12.0", features=["attributes"] }
js-sys = "0.3.68"
lightningcss = "1.0.0-alpha.53"
mathlikeanim-rs = "0.3.2"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
svg = "0.15.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = { version="0.3.68", features=[
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'ImageData',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
